// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`artworks util functions tests constructAdvSearchFilter test 1`] = `
{
  "categories": {
    "$all": [
      {
        "$elemMatch": {
          "name": "Tytuł",
          "subcategories": {
            "$all": [
              {
                "$elemMatch": {
                  "name": "Podtytuł",
                  "subcategories": {
                    "$all": [
                      {
                        "$elemMatch": {
                          "name": "Podpodtytuł",
                          "subcategories": {
                            "$all": [
                              {
                                "$elemMatch": {
                                  "name": "Podpodpodtytuł",
                                  "values": [
                                    "testowy podpodpodtytuł",
                                  ],
                                },
                              },
                            ],
                          },
                        },
                      },
                    ],
                  },
                  "values": [
                    "testowy podtytuł",
                  ],
                },
              },
            ],
          },
          "values": [
            "testowy",
          ],
        },
      },
      {
        "$elemMatch": {
          "name": "Artyści",
          "values": [
            "testowi",
          ],
        },
      },
      {
        "$elemMatch": {
          "name": "Rok",
          "subcategories": {
            "$all": [
              {
                "$elemMatch": {
                  "name": "Miesiąc",
                  "values": [
                    "Luty",
                  ],
                },
              },
            ],
          },
          "values": [
            "966",
          ],
        },
      },
    ],
  },
  "collectionName": "collection",
}
`;

exports[`artworks util functions tests constructAdvSearchFilter test 2`] = `
{
  "categories": {
    "$all": [],
  },
  "collectionName": "collection",
}
`;

exports[`artworks util functions tests constructQuickSearchFilter test - maxDepth=0 1`] = `
{
  "categories": [],
  "collectionName": "collection",
}
`;

exports[`artworks util functions tests constructQuickSearchFilter test - maxDepth=1 1`] = `
{
  "categories": {
    "$elemMatch": {
      "$or": [
        {
          "values": [
            "text to find",
          ],
        },
      ],
    },
  },
  "collectionName": "collection",
}
`;

exports[`artworks util functions tests constructQuickSearchFilter test - maxDepth=4 1`] = `
{
  "categories": {
    "$elemMatch": {
      "$or": [
        {
          "values": [
            "text to find",
          ],
        },
        {
          "subcategories": {
            "$elemMatch": {
              "$or": [
                {
                  "values": [
                    "text to find",
                  ],
                },
                {
                  "subcategories": {
                    "$elemMatch": {
                      "$or": [
                        {
                          "values": [
                            "text to find",
                          ],
                        },
                        {
                          "subcategories": {
                            "$elemMatch": {
                              "$or": [
                                {
                                  "values": [
                                    "text to find",
                                  ],
                                },
                              ],
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              ],
            },
          },
        },
      ],
    },
  },
  "collectionName": "collection",
}
`;
